<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rt2_844_test</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="akm@isp.co.jp">akm</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_export_depend>lifecycle_msgs</build_export_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>rclcpp_lifecycle</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>

  <test_depend>lifecycle_msgs</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-cov</test_depend>
  <test_depend>rclcpp</test_depend>
  <test_depend>rclcpp_lifecycle</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>tracetools</test_depend>
  <test_depend>tracetools_test</test_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
